fixed z-index for hero main block on complete animation

--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -72,6 +72,10 @@
   //background-image: url(/img/hero-main/background.jpg);
   background-repeat: no-repeat;
 
+  &.complete {
+    z-index: 0;
+  }
+
   img, video {
     position: absolute;
     bottom: 0;
