--- a/src/scss/_image-container.scss
+++ b/src/scss/_image-container.scss
@@ -56,6 +56,7 @@
   > .logos {
     position: relative;
     margin-bottom: -20vh;
+    padding-top: 10vh;
     z-index: 1;
   }
 }
