--- a/src/scss/_site.scss
+++ b/src/scss/_site.scss
@@ -23,8 +23,7 @@
   .site {
 
     &_main {
-      //top: 77px;
-      padding-top: 100vh;
+      padding-top: 120vh;
     }
   }
 }
